# openssl_tls_demo

./: CMakeLists.txt  README.md  build.sh
certs/: crt_gen.sh  server.crt  server.key
include/: config.h  server.h
include/openssl/: configuration.h
openssl_src/openssl-1_1_1-stable/: build.sh
openssl_src/openssl-master/: build.sh
src/: main.c  server.c
